# m5stick-encoder

./: .gitignore  Makefile  README.md  config.json  config.json.example  pyproject.toml
.claude/agents/: developer.md  firmware.md  test.md
.claude/commands/: firmware.md  watch-work.md
.github/ISSUE_TEMPLATE/: future-phase.md  phase-task.md
.github/workflows/: ci.yml
fonts/: Cascadia12.vlw  Cascadia14.vlw  Cascadia16.vlw  Cascadia18.vlw  Cascadia20.vlw  Cascadia24.vlw  Cascadia30.vlw
src/: main.py
src/encoder/: __init__.py  base.py  caesar.py  keyword.py  rot13.py  vigenere.py
src/hw/: axp_buttons.py  buzzer.py  pwr_button.py
src/ui/: app.py  buttons.py  config.py  display.py  display_m5.py  display_mock.py  events.py  key_store.py  screen.py  sleep.py  state.py
tests/: test_axp_buttons.py  test_buttons_fsm.py  test_buzzer.py  test_config.py  test_display_m5.py  test_encoder_caesar.py  test_key_store.py  test_keyword.py  test_main.py  test_mpy_import_check.py  test_pwr_button.py  test_registry.py  test_rot13.py  test_screen_layout.py  test_sim_wiring.py  test_sleep.py  test_splash.py  test_state_machine.py  test_tools_scripts.py  test_vigenere.py
tools/: device_prep.sh  flash.sh  make_vlw.py  mpy_import_check.py  repl.sh  sim.py  upload.sh
